added some classes and test styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,26 @@ html {
     scroll-behavior: smooth;
   }
 
-  
+  body {
+    font-family:'Courier New', Courier, monospace
+    margin: 0;
+  }
+
+  header{
+    height:100vh;
+  }
+
+  .hero-content{
+    width: 50%;
+    text-align: center;
+    color:#000
+    t
+  }
+
+  h1{
+
+  }
+
+  h2{
+
+  }
