--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,50 @@
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
-  body {
-    font-family:'Courier New', Courier, monospace
-    margin: 0;
-  }
+body {
+  font-family: 'Oswald', sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  header{
-    height:100vh;
-  }
+header {
+  height: 100vh;
+}
 
-  .hero-content{
-    width: 50%;
-    text-align: center;
-    color:#000
-    t
-  }
+.hero-content {
+  width: 50%;
+  text-align: center;
+  color: #000;
+}
 
-  h1{
+p {
+  font-weight: 200;
+  font-size: 18px;
+  line-height: 30px;
+}
 
-  }
+a {
+  margin-top: 30px;
+  margin-right:10px;
+  background-color: rgb(0, 0, 0, 0.6);
+  padding: 10px;
+  text-decoration: none;
+  color: #fff;
+  display: inline-block;
+}
 
-  h2{
+span .font-pair1a{
+  font-family: 'Merriweather', serif;
+}
 
-  }
+span .font-pair1b{
+  font-family: 'Merriweather+Sans', sans-serif;
+}
+
+
+/*my css*/
+
+.hero-background {
+  background: url("https://images.unsplash.com/27/type-set.jpg?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1768&q=80") no-repeat fixed center;
+  background-size: cover;
