--- a/css/styles.css
+++ b/css/styles.css
@@ -46,5 +46,5 @@ span .font-pair1b{
 /*my css*/
 
 .hero-background {
-  background: url("https://images.unsplash.com/27/type-set.jpg?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1768&q=80") no-repeat fixed center;
+  background: url("https://images.pexels.com/photos/1774986/pexels-photo-1774986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") no-repeat fixed center;
   background-size: cover;
