--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,9 @@ span .font-pair1b{
 .hero-background {
   background: url("https://images.pexels.com/photos/1774986/pexels-photo-1774986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") no-repeat fixed center;
   background-size: cover;
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
