--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,11 @@ span .font-pair1b{
   justify-content: center;
   align-items: center;
 }
+
+h3{
+  font-family:'Courier New', Courier, monospace
+}
+
+p{
+  font-family:Arial, Helvetica, sans-serif
+}
