--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,18 @@ span .font-pair1b{
   align-items: center;
 }
 
+h1{
+  font-size:42px;
+  line-height:72px;
+  font-family:Arial, Helvetica, sans-serif
+  margin:0;
+}
+
+h2{
+  font-size:28px;
+  font-family:'Courier New', Courier, monospace
+}
+
 h3{
   font-family:'Courier New', Courier, monospace
 }
