--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ span .font-pair1b{
 .hero-background {
   background: url("https://images.unsplash.com/photo-1612196808827-9ff25cb6137a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80") no-repeat fixed center;
   background-size: cover;
-  background-color:;
+  /* background-color:; */
 /*  opacity:.85;*/
   width: 700px;
   margin:0 auto;
