added to jquery

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,9 @@ html {
   scroll-behavior: smooth;
 }
 
-
-/* .hidden {
+.hidden {
  display: none; 
-} */
+}
 
 body {
   font-family: "Open Sans", "Arial", sans-serif;
@@ -24,7 +23,7 @@ header {
 }
 
 .hero-content p{
-  margin: auto 50px;
+  margin: auto 90px;
   font-weight:500;
 /*   background-color:white; */
 /*  filter: blur(8px);
@@ -74,10 +73,11 @@ span .font-pair1b{
 .hero-background {
   background: url("https://images.unsplash.com/photo-1612196808827-9ff25cb6137a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80") no-repeat fixed center;
   background-size: cover;
-  /* background-color:; */
+  background-color:#66f542;
 /*  opacity:.85;*/
   width: 700px;
   margin:0 auto;
+/*   display: inline-block; */
 /*  height: auto;*/
 }
 
@@ -85,6 +85,8 @@ span .font-pair1b{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 700px;
+  margin:0 auto;
 }
 
 .first-section-background {
