--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ span .font-pair1b{
 /*  opacity:.85;*/
   width: 700px;
   margin:0 auto;
+  height:1000px;
 /*   display: inline-block; */
 /*  height: auto;*/
 }
@@ -111,7 +112,7 @@ span .font-pair1b{
   justify-content: center;
   align-items: center;
   margin:0 auto;
-  height:70%;
+  height:1000px;
 }
 
 /*section {
